--- a/SentimentAnalysisTwitter.ipynb
+++ b/SentimentAnalysisTwitter.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SentimentAnalysisTwitter.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO0hPqnxlRwBRDubJoiCwzH",
+      "authorship_tag": "ABX9TyOmllMT4Jy6OojMKXZcJyFx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -285,11 +285,10 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 248
+          "base_uri": "https://localhost:8080/"
         },
         "id": "s2P2BqK8OQDS",
-        "outputId": "62622e70-4cee-42f0-cec6-f33014e9f6cf"
+        "outputId": "355f06a0-4b92-4998-8f39-34db26230794"
       },
       "source": [
         "#Data preprocessing - This transforms the raw data into an understantable format \r\n",
@@ -299,49 +298,49 @@
         "\r\n",
         "#Text preprocessing - cleaning and preparing text data\r\n",
         "#Selecting a tokenizer model. -  word_tokenize - Tokenizer for normal text\r\n",
+        "from nltk.tokenize import word_tokenize\r\n",
         "\r\n",
-        "#TweetTokenizer - Tokenizer for tweets - As the dataset contains text in the form of tweets we will be using this . \r\n",
         "\r\n",
         "list_tokenised_text = []  #Creat an empty list\r\n",
-        "\r\n",
-        "for text in df['Text']: # Converting text to tokens by iterating through each row in 'Text' columm. \r\n",
-        "  tokenized_text = TweetTokenizer(text)\r\n",
+        "#for loop \r\n",
+        "for text in df['Text']: # Converting text to tokens by iterating through each row in 'Text' columm of the dataset. \r\n",
+        "  tokenized_text =  word_tokenize(text)\r\n",
         "  list_tokenised_text.append(tokenized_text) #Adding the tokenzie text inside the empty list \r\n",
         "\r\n",
-        "print(list_tokenised_text[:2]) #the list containing the tokenzied text \r\n",
+        "print(list_tokenised_text[:2]) #the list containing the tokenzied text - [:2] = showing the first two items in the list\r\n",
         "\r\n",
-        "#After tokenizing we need to put them back into sentences \r\n",
+        "#After tokenizing we need to put them back into sentences - as for feature generation, vectorisers you need to imput sentences \r\n",
         "\r\n",
-        "list_tokenised_sentences = []\r\n",
+        "list_tokenised_sentences = [] #creating an empty list to keep the tokenised sentences \r\n",
         "for tokens in list_tokenised_text:\r\n",
-        "  text = ' '.join(tokens)\r\n",
+        "  text = ' '.join(tokens) #each sentence will be joined by a space \r\n",
         "  list_tokenised_sentences.append(text)\r\n",
         "\r\n",
         "# adding a  new column to data frame\r\n",
         "df['Tokenised_Text'] = list_tokenised_sentences\r\n",
         "\r\n"
       ],
-      "execution_count": 11,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[<nltk.tokenize.casual.TweetTokenizer object at 0x7f0685e03710>, <nltk.tokenize.casual.TweetTokenizer object at 0x7f0685e03748>]\n"
+            "[['Sooo', 'SAD', 'I', 'will', 'miss', 'you', 'here', 'in', 'San', 'Diego', '!', '!', '!'], ['my', 'boss', 'is', 'bullying', 'me', '...']]\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-11-8d2e774c5d70>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0mlist_tokenised_sentences\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtokens\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mlist_tokenised_text\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m   \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m' '\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtokens\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m   \u001b[0mlist_tokenised_sentences\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: can only join an iterable"
-          ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qcara_dUeW8X"
+      },
+      "source": [
+        "#Text normalisation "
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
