--- a/SentimentAnalysisTwitter.ipynb
+++ b/SentimentAnalysisTwitter.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SentimentAnalysisTwitter.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMmNux6Gozi5/kI/zqB9Avy",
+      "authorship_tag": "ABX9TyMApJD8STTzpZnV3t0RannE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zl0-4Gj-LJqE",
-        "outputId": "0c7e85d6-2dad-4c8a-a1a4-d0aac7f8d909"
+        "outputId": "9771aeb5-e1ed-489a-fba5-6a89bf21fd3e"
       },
       "source": [
         "# import libraries\r\n",
@@ -65,17 +65,17 @@
         "# libraries for data plotting\r\n",
         "import matplotlib.pyplot as plt "
       ],
-      "execution_count": 18,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
             "[nltk_data] Downloading package wordnet to /root/nltk_data...\n",
-            "[nltk_data]   Package wordnet is already up-to-date!\n",
+            "[nltk_data]   Unzipping corpora/wordnet.zip.\n",
             "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Package stopwords is already up-to-date!\n"
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
           ],
           "name": "stdout"
         }
@@ -86,10 +86,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 214
+          "height": 212
         },
         "id": "7SMf5GsFM7z5",
-        "outputId": "1826e991-9449-46e5-b8e2-21fc386b0324"
+        "outputId": "3d81a171-6968-4af6-bd77-9e7e6aae9d36"
       },
       "source": [
         "#uploading the dataset\r\n",
@@ -192,10 +192,10 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 329
+          "height": 331
         },
         "id": "cjyNjWYxNafi",
-        "outputId": "07ecab27-b0ec-4bde-d6af-f41207208081"
+        "outputId": "3a3d5001-f08c-4ab6-9e31-f2e090ddae02"
       },
       "source": [
         "#Analysising the data - Compare the amount of postitive and negative tweets \r\n",
@@ -209,7 +209,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7fb77b007fd0>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f6b8efc6f98>"
             ]
           },
           "metadata": {
@@ -239,7 +239,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_23hi3D8O-YA",
-        "outputId": "60a88a7d-7e53-4b10-9e1b-1a8222662f32"
+        "outputId": "25cf5255-7fc1-4dbc-806e-b2c1d3a25ef8"
       },
       "source": [
         "#Data cleaning  - Important step as the ML model and data processing cannot start if the dataset contains missing values\r\n",
@@ -288,7 +288,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s2P2BqK8OQDS",
-        "outputId": "9b6c116d-c767-4fc3-dcbc-a9517b4286b8"
+        "outputId": "63950e17-3ba9-4ae5-96a6-8c3605e3302f"
       },
       "source": [
         "#Data preprocessing - This transforms the raw data into an understantable format \r\n",
@@ -338,7 +338,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qcara_dUeW8X",
-        "outputId": "cc6dff27-4860-4e0a-816e-ca450a60ca82"
+        "outputId": "81a99b19-b649-4813-c0b6-76afb60db94c"
       },
       "source": [
         "#Text normalisation -  the process of transforming a text into a canonical (standard) form. For example, the word “gooood” and “gud” can be transformed to “good”, its canonical form.\r\n",
@@ -365,7 +365,7 @@
         "# add new column to data frame\r\n",
         "df['Lemmatised_Text'] = list_lemmatised_sentences"
       ],
-      "execution_count": 7,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -380,8 +380,54 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "2fgVHp27SIB6",
+        "outputId": "ef7cb5ed-56d2-42b5-f038-0fee8fb83e72"
+      },
+      "source": [
+        "#Text Preprocessing - Punctuatuion removal \r\n",
+        "\r\n",
+        "import string \r\n",
+        "\r\n",
+        "print(f'Punctuation marks to remove: {string.punctuation}') #The punctuation that will be removed from the text\r\n",
+        "\r\n",
+        "list_punctuation_removal = []\r\n",
+        "\r\n",
+        "for tokens in list_punctuation_removal:\r\n",
+        "  punctuation_words = []\r\n",
+        "  for word in tokens:\r\n",
+        "    punctuation_words = str.maketrans(dict.fromkeys(string.punctuation))\r\n",
+        "    list_punctuation_removal= punctuation_words.translate(word)\r\n",
+        "    list_punctuation_removal.append(punctuation_words)\r\n",
+        "\r\n",
+        "print(list_punctuation_removal[:2])\r\n",
+        "\r\n",
+        "list_punctuation_removal_sentences = []\r\n",
+        "for tokens in list_punctuation_removal:\r\n",
+        "  text = ' '.join(tokens)\r\n",
+        "  list_punctuation_removal_sentences.append(text)\r\n",
+        "\r\n",
+        "#df['punctuation removed text'] = list_punctuation_removal_sentences\r\n"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Punctuation marks to remove: !\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~\n",
+            "[]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 944
+          "height": 927
         },
         "id": "d3-jIesZUW_d",
         "outputId": "e4b435dc-8dce-4777-c4d6-079876732170"
@@ -863,7 +909,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 312
+          "height": 313
         },
         "id": "R7fDY71ofCmi",
         "outputId": "9b90d3c9-43b0-4818-f138-914de67fd3bd"
@@ -910,7 +956,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 312
+          "height": 313
         },
         "id": "DHtTMqTnf9X3",
         "outputId": "fc831238-a4ae-425d-e526-b20f1cd85fb3"
@@ -955,7 +1001,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 312
+          "height": 313
         },
         "id": "0M871CbYfvi0",
         "outputId": "3138731b-ad2d-4e10-9c34-36654bb83c4b"
