--- a/SentimentAnalysisTwitter.ipynb
+++ b/SentimentAnalysisTwitter.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SentimentAnalysisTwitter.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyODNY3gMLZ9Bc0ugPU/m6fS",
+      "authorship_tag": "ABX9TyP+w/iGIPY/Oz2eRyuG92Xr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -966,7 +966,7 @@
         "id": "own_Fw4FeOx2"
       },
       "source": [
-        "# NEED TO CHANGE - confusion matrix is a performance measurement technique for Machine learning classification. It is a kind of table which helps you to the know the performance of the classification model on a set of test data for that the true values are known\r\n",
+        "#confusion matrix is a performance measurement technique for Machine learning classification models.  \r\n",
         "#method to plot confusion matrix\r\n",
         "\r\n",
         "def plot_confusion_matrix(matrix):\r\n",
@@ -1046,7 +1046,7 @@
         "# Data preprocessing - lower casing, punctuation removal, tokenisation(NLTK), stop word removal\r\n",
         "# Features - tf-idf vector (1-grams)\r\n",
         "\r\n",
-        "vectorizer = TfidfVectorizer(stop_words=stop_words)  # default: lowercase=True, ngram_range=(1,1)\r\n",
+        "vectorizer = TfidfVectorizer(stop_words=stop_words) \r\n",
         "vectorizer.fit(X_train_tokenised_text)\r\n",
         "\r\n",
         "# convert train and test text data to numeric vectors\r\n",
@@ -1085,7 +1085,8 @@
         "id": "Y2Kia0vrGB9V"
       },
       "source": [
-        "**M2**\r\n"
+        "**M2**\r\n",
+        "- Using the orginal training data"
       ]
     },
     {
@@ -1134,6 +1135,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VVprG3Zxe7Wz"
+      },
+      "source": [
+        "**M 2.5** \r\n",
+        "Lowercasing "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -1144,14 +1155,12 @@
         "outputId": "3138731b-ad2d-4e10-9c34-36654bb83c4b"
       },
       "source": [
-        "# Data preprocessing - lower casing, punctuation removal\r\n",
-        "# Features - tf-idf vector (1-grams)\r\n",
         "\r\n",
-        "vectorizer = TfidfVectorizer()  # default: lowercase=True, ngram_range=(1,1)\r\n",
+        "vectorizer = TfidfVectorizer()  # Transforms text to feature vectors\r\n",
         "vectorizer.fit(X_train_text)\r\n",
         "\r\n",
         "# convert train and test text data to numeric vectors\r\n",
-        "X_train = vectorizer.transform(X_train_text)\r\n",
+        "X_train = vectorizer.transform(X_train_text) # \r\n",
         "X_val = vectorizer.transform(X_val_text)\r\n",
         "\r\n",
         "model = get_svm_predictions(X_train, X_val, y_train, y_val)"
@@ -1193,19 +1202,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zrtVCTC7HU2-",
-        "outputId": "4767b20a-e9f6-484d-93b7-f756c718a87e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 313
-        }
+        },
+        "id": "zrtVCTC7HU2-",
+        "outputId": "4767b20a-e9f6-484d-93b7-f756c718a87e"
       },
       "source": [
-        "# Data preprocessing - lower casing, punctuation removal, lemmatisation(WordNet)\r\n",
-        "# Features - tf-idf vector (1-grams)\r\n",
         "\r\n",
-        "vectorizer = TfidfVectorizer()  # default: lowercase=True, ngram_range=(1,1)\r\n",
-        "vectorizer.fit(X_train_lemmatised_text)\r\n",
+        "vectorizer = TfidfVectorizer()  \r\n",
+        "vectorizer.fit(X_train_lemmatised_text) #Using the lemmatisation text data \r\n",
         "\r\n",
         "# convert train and test text data to numeric vectors\r\n",
         "X_train = vectorizer.transform(X_train_lemmatised_text)\r\n",
@@ -1249,12 +1256,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N5aj2aakKbD-",
-        "outputId": "e16c9e46-5f0d-4007-ae07-cc916ce31e48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 313
-        }
+        },
+        "id": "N5aj2aakKbD-",
+        "outputId": "e16c9e46-5f0d-4007-ae07-cc916ce31e48"
       },
       "source": [
         "# Data preprocessing - lower casing, punctuation removal, tokenisation(NLTK), stop word removal\r\n",
@@ -1305,12 +1312,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fYro1CH5LiVg",
-        "outputId": "5bcbb366-1c40-4b2e-e6ae-bb6931831a6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 313
-        }
+        },
+        "id": "fYro1CH5LiVg",
+        "outputId": "5bcbb366-1c40-4b2e-e6ae-bb6931831a6c"
       },
       "source": [
         "\r\n",
@@ -1353,22 +1360,24 @@
         "id": "_MGk330xMLYw"
       },
       "source": [
-        "**M6**"
+        "**M6**\r\n",
+        "Using orginal trained data,\r\n",
+        "ngram_range=(1,2)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uYEjb4GNMObp",
-        "outputId": "9ec6b657-1f06-4875-92c5-ad171fb2efb2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 313
-        }
+        },
+        "id": "uYEjb4GNMObp",
+        "outputId": "9ec6b657-1f06-4875-92c5-ad171fb2efb2"
       },
       "source": [
         "\r\n",
-        "vectorizer = TfidfVectorizer(ngram_range=(1,2))  # default: lowercase=True, ngram_range=(1,1)\r\n",
+        "vectorizer = TfidfVectorizer(ngram_range=(1,2)) #ngram_range was changed \r\n",
         "vectorizer.fit(X_train_text)\r\n",
         "\r\n",
         "# convert train and test text data to numeric vectors\r\n",
@@ -1407,22 +1416,23 @@
         "id": "6SxlJYWiMybW"
       },
       "source": [
-        "M7"
+        "**M7**\r\n",
+        "No punctuation text data and ngram_range=(1,2)"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "tttngr4sMk9m",
-        "outputId": "15899b22-9ce7-4e61-adf9-001d900a8102",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 313
-        }
+        },
+        "id": "tttngr4sMk9m",
+        "outputId": "15899b22-9ce7-4e61-adf9-001d900a8102"
       },
       "source": [
         "\r\n",
-        "vectorizer = TfidfVectorizer(ngram_range=(1,2))  # default: lowercase=True, ngram_range=(1,1)\r\n",
+        "vectorizer = TfidfVectorizer(ngram_range=(1,2))  \r\n",
         "vectorizer.fit(X_train_no_Punctuation)\r\n",
         "\r\n",
         "# convert train and test text data to numeric vectors\r\n",
@@ -1458,12 +1468,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jJZqD4bLQNq0",
-        "outputId": "112871b1-d096-45d3-8cbf-6e1b6b4100e9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 194
-        }
+        },
+        "id": "jJZqD4bLQNq0",
+        "outputId": "112871b1-d096-45d3-8cbf-6e1b6b4100e9"
       },
       "source": [
         "df_test = pd.read_csv('/content/test.csv')\r\n",
@@ -1546,11 +1556,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_8NlXJjeNLCE",
-        "outputId": "c02efccc-e3c8-437c-c4f7-9825d5a72014",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_8NlXJjeNLCE",
+        "outputId": "c02efccc-e3c8-437c-c4f7-9825d5a72014"
       },
       "source": [
         "# preprocessing used with Model M7 - \r\n",
