--- a/SentimentAnalysisTwitter.ipynb
+++ b/SentimentAnalysisTwitter.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "SentimentAnalysisTwitter.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP+w/iGIPY/Oz2eRyuG92Xr",
+      "authorship_tag": "ABX9TyNorMf/zvxwql/Yf45tV7wI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1560,15 +1560,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_8NlXJjeNLCE",
-        "outputId": "c02efccc-e3c8-437c-c4f7-9825d5a72014"
+        "outputId": "758d2f7c-0c2e-4ef7-857f-3c75ede43df8"
       },
       "source": [
         "# preprocessing used with Model M7 - \r\n",
         "X_test = vectorizer.transform(df_test['Text'])\r\n",
         "predictions = model.predict(X_test)\r\n",
-        "print(predictions)"
+        "print(predictions)\r\n",
+        "\r\n",
+        "df_test['Sentiment'] = predictions\r\n",
+        "\r\n",
+        "# save data frame to .csv file\r\n",
+        "df_test.to_csv('/content/test-predictions.csv', index=False)"
       ],
-      "execution_count": 37,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -1743,26 +1748,6 @@
           ],
           "name": "stdout"
         }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "L4a7Wd2liOhY"
-      },
-      "source": [
-        "#test performance "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "KH98nfbqQeKR"
-      },
-      "source": [
-        ""
       ]
     }
   ]
